name:           lancerpg
version:        0.1.0.0
author:         Eric Roberts
maintainer:     eric@threedot14.com
category:       Game
build-type:     Simple
cabal-version:  >=1.10

executable lancerpg
    hs-source-dirs:     src
    main-is:            Main.hs
    default-extensions: NoImplicitPrelude, OverloadedStrings
    build-depends:      base,
                        protolude,
                        ncurses
    other-modules:      Lance.Term,
                        Lance.Util
